deploy: 2ea11882fdf41c31cc08ec46d5c1e2dd670b54c0

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b331e1e6",
+   "id": "8703e1bd",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23971af3",
+   "id": "87959f2c",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1bae9ee",
+   "id": "58613236",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e39c66e",
+   "id": "e50cce2c",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1452378",
+   "id": "00b4cca1",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecde51e2",
+   "id": "a110b3a3",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cf64e50f",
+   "id": "9036ef4e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:30.238077Z",
-     "iopub.status.busy": "2025-01-27T15:50:30.237880Z",
-     "iopub.status.idle": "2025-01-27T15:50:34.580671Z",
-     "shell.execute_reply": "2025-01-27T15:50:34.580140Z"
+     "iopub.execute_input": "2025-01-27T16:16:22.613816Z",
+     "iopub.status.busy": "2025-01-27T16:16:22.613405Z",
+     "iopub.status.idle": "2025-01-27T16:16:26.970005Z",
+     "shell.execute_reply": "2025-01-27T16:16:26.969436Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22bbb3fa",
+   "id": "e21ce928",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d090876f",
+   "id": "6c019e70",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae81a2c4",
+   "id": "9dc1661a",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fe2fe7e",
+   "id": "52442d46",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ee43a3",
+   "id": "69c35ab0",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6872f40c",
+   "id": "d267f03b",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "657e4d75",
+   "id": "126d9775",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4ae6547",
+   "id": "8fb9808e",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "caa5b4fa",
+   "id": "938ee997",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:34.582855Z",
-     "iopub.status.busy": "2025-01-27T15:50:34.582422Z",
-     "iopub.status.idle": "2025-01-27T15:50:36.520473Z",
-     "shell.execute_reply": "2025-01-27T15:50:36.519854Z"
+     "iopub.execute_input": "2025-01-27T16:16:26.972185Z",
+     "iopub.status.busy": "2025-01-27T16:16:26.971889Z",
+     "iopub.status.idle": "2025-01-27T16:16:29.073496Z",
+     "shell.execute_reply": "2025-01-27T16:16:29.072861Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c970ad1",
+   "id": "f1d2e0cb",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a2a286e1",
+   "id": "857d4045",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:36.522289Z",
-     "iopub.status.busy": "2025-01-27T15:50:36.522098Z",
-     "iopub.status.idle": "2025-01-27T15:50:36.525412Z",
-     "shell.execute_reply": "2025-01-27T15:50:36.524923Z"
+     "iopub.execute_input": "2025-01-27T16:16:29.075640Z",
+     "iopub.status.busy": "2025-01-27T16:16:29.075243Z",
+     "iopub.status.idle": "2025-01-27T16:16:29.078651Z",
+     "shell.execute_reply": "2025-01-27T16:16:29.077947Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "625a6e0d",
+   "id": "3ad01f4f",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed66459f",
+   "id": "217fa7d0",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f0ce807",
+   "id": "8f46b6a2",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a183389c",
+   "id": "9c316052",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43245f71",
+   "id": "65527dc9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:36.527329Z",
-     "iopub.status.busy": "2025-01-27T15:50:36.526976Z",
-     "iopub.status.idle": "2025-01-27T15:50:36.572135Z",
-     "shell.execute_reply": "2025-01-27T15:50:36.571555Z"
+     "iopub.execute_input": "2025-01-27T16:16:29.080634Z",
+     "iopub.status.busy": "2025-01-27T16:16:29.080323Z",
+     "iopub.status.idle": "2025-01-27T16:16:29.127445Z",
+     "shell.execute_reply": "2025-01-27T16:16:29.126841Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "776d25b1",
+   "id": "d2993efd",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9e4e3b88",
+   "id": "d9108eb1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:36.574130Z",
-     "iopub.status.busy": "2025-01-27T15:50:36.573759Z",
-     "iopub.status.idle": "2025-01-27T15:50:36.642779Z",
-     "shell.execute_reply": "2025-01-27T15:50:36.642270Z"
+     "iopub.execute_input": "2025-01-27T16:16:29.129269Z",
+     "iopub.status.busy": "2025-01-27T16:16:29.129079Z",
+     "iopub.status.idle": "2025-01-27T16:16:29.203530Z",
+     "shell.execute_reply": "2025-01-27T16:16:29.202979Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a13040ae",
+   "id": "e3d17eac",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13d7617b",
+   "id": "b3298a1a",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a1986f29",
+   "id": "5371ebb7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:36.644795Z",
-     "iopub.status.busy": "2025-01-27T15:50:36.644441Z",
-     "iopub.status.idle": "2025-01-27T15:50:36.675165Z",
-     "shell.execute_reply": "2025-01-27T15:50:36.674653Z"
+     "iopub.execute_input": "2025-01-27T16:16:29.205760Z",
+     "iopub.status.busy": "2025-01-27T16:16:29.205275Z",
+     "iopub.status.idle": "2025-01-27T16:16:29.238329Z",
+     "shell.execute_reply": "2025-01-27T16:16:29.237727Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81da584",
+   "id": "b27982d5",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8e2fbe2",
+   "id": "d4d2afaf",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "417146ca",
+   "id": "ea2209ef",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df900406",
+   "id": "8a96685e",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99f14a2",
+   "id": "512984a2",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cfab745c",
+   "id": "9e93f002",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:36.677085Z",
-     "iopub.status.busy": "2025-01-27T15:50:36.676878Z",
-     "iopub.status.idle": "2025-01-27T15:50:36.680951Z",
-     "shell.execute_reply": "2025-01-27T15:50:36.680391Z"
+     "iopub.execute_input": "2025-01-27T16:16:29.240608Z",
+     "iopub.status.busy": "2025-01-27T16:16:29.240231Z",
+     "iopub.status.idle": "2025-01-27T16:16:29.245314Z",
+     "shell.execute_reply": "2025-01-27T16:16:29.244688Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b4dccd7",
+   "id": "02ce27ef",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0ce281bd",
+   "id": "b6a46815",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:36.682654Z",
-     "iopub.status.busy": "2025-01-27T15:50:36.682351Z",
-     "iopub.status.idle": "2025-01-27T15:50:36.685255Z",
-     "shell.execute_reply": "2025-01-27T15:50:36.684687Z"
+     "iopub.execute_input": "2025-01-27T16:16:29.247154Z",
+     "iopub.status.busy": "2025-01-27T16:16:29.246796Z",
+     "iopub.status.idle": "2025-01-27T16:16:29.249869Z",
+     "shell.execute_reply": "2025-01-27T16:16:29.249376Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "268a0d6a",
+   "id": "e592713d",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7d16b506",
+   "id": "da474739",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:36.687000Z",
-     "iopub.status.busy": "2025-01-27T15:50:36.686683Z",
-     "iopub.status.idle": "2025-01-27T15:50:39.275602Z",
-     "shell.execute_reply": "2025-01-27T15:50:39.274991Z"
+     "iopub.execute_input": "2025-01-27T16:16:29.251668Z",
+     "iopub.status.busy": "2025-01-27T16:16:29.251296Z",
+     "iopub.status.idle": "2025-01-27T16:16:31.881830Z",
+     "shell.execute_reply": "2025-01-27T16:16:31.881188Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86373181",
+   "id": "407ff243",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24612a17",
+   "id": "28980cfb",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6c5fe11",
+   "id": "ff0617a4",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd12ee1",
+   "id": "787c6c95",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "db224fcf",
+   "id": "2b51391c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:39.277684Z",
-     "iopub.status.busy": "2025-01-27T15:50:39.277346Z",
-     "iopub.status.idle": "2025-01-27T15:50:39.280721Z",
-     "shell.execute_reply": "2025-01-27T15:50:39.280123Z"
+     "iopub.execute_input": "2025-01-27T16:16:31.884045Z",
+     "iopub.status.busy": "2025-01-27T16:16:31.883694Z",
+     "iopub.status.idle": "2025-01-27T16:16:31.887474Z",
+     "shell.execute_reply": "2025-01-27T16:16:31.886829Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7efe4c5a7560>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f320c9a76a0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9efd86b0",
+   "id": "731a47eb",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b6300d2",
+   "id": "ad5eb1ce",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad4e914",
+   "id": "1a925995",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa432ae",
+   "id": "d3c7c1ed",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dc1e8377",
+   "id": "ab756c32",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:39.282509Z",
-     "iopub.status.busy": "2025-01-27T15:50:39.282343Z",
-     "iopub.status.idle": "2025-01-27T15:50:39.285148Z",
-     "shell.execute_reply": "2025-01-27T15:50:39.284471Z"
+     "iopub.execute_input": "2025-01-27T16:16:31.889344Z",
+     "iopub.status.busy": "2025-01-27T16:16:31.889163Z",
+     "iopub.status.idle": "2025-01-27T16:16:31.891984Z",
+     "shell.execute_reply": "2025-01-27T16:16:31.891494Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "10c3eec2",
+   "id": "7cfdb43e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:50:39.286972Z",
-     "iopub.status.busy": "2025-01-27T15:50:39.286636Z",
-     "iopub.status.idle": "2025-01-27T15:50:40.336669Z",
-     "shell.execute_reply": "2025-01-27T15:50:40.336089Z"
+     "iopub.execute_input": "2025-01-27T16:16:31.893554Z",
+     "iopub.status.busy": "2025-01-27T16:16:31.893378Z",
+     "iopub.status.idle": "2025-01-27T16:16:32.949484Z",
+     "shell.execute_reply": "2025-01-27T16:16:32.948919Z"
     }
    },
    "outputs": [
