--- a/tutorials/c_plotting.ipynb
+++ b/tutorials/c_plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae0c79d9",
+   "id": "d3f5345d",
    "metadata": {},
    "source": [
     "# Plotting\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5df524aa",
+   "id": "c5bfcd08",
    "metadata": {},
    "source": [
     "1. geometry\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8727509",
+   "id": "5d4eada4",
    "metadata": {},
    "source": [
     "All public plotting functions are associated with a list of orbitals."
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c55160b",
+   "id": "5981a8ca",
    "metadata": {},
    "source": [
     "## Geometry\n",
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6a3324c8",
+   "id": "78616154",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:38.758211Z",
-     "iopub.status.busy": "2025-01-27T15:51:38.757688Z",
-     "iopub.status.idle": "2025-01-27T15:51:43.698183Z",
-     "shell.execute_reply": "2025-01-27T15:51:43.697570Z"
+     "iopub.execute_input": "2025-01-27T16:17:31.245739Z",
+     "iopub.status.busy": "2025-01-27T16:17:31.245528Z",
+     "iopub.status.idle": "2025-01-27T16:17:36.313948Z",
+     "shell.execute_reply": "2025-01-27T16:17:36.313355Z"
     }
    },
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3572271f",
+   "id": "8aaffe2b",
    "metadata": {},
    "source": [
     "If we have a stack"
@@ -82,13 +82,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b324fe00",
+   "id": "c54f085c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:43.700372Z",
-     "iopub.status.busy": "2025-01-27T15:51:43.699956Z",
-     "iopub.status.idle": "2025-01-27T15:51:44.008148Z",
-     "shell.execute_reply": "2025-01-27T15:51:44.006407Z"
+     "iopub.execute_input": "2025-01-27T16:17:36.316021Z",
+     "iopub.status.busy": "2025-01-27T16:17:36.315739Z",
+     "iopub.status.idle": "2025-01-27T16:17:36.613783Z",
+     "shell.execute_reply": "2025-01-27T16:17:36.613222Z"
     }
    },
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12b1d652",
+   "id": "49b7f1a2",
    "metadata": {},
    "source": [
     "## Simulation output"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb36d4ac",
+   "id": "be742368",
    "metadata": {},
    "source": [
     "There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current considering the previously defined flake under x-polarized Gaussian pulsed illumination, which in GRANAD's units is equivalent to the velocity operator given by the commutator of the system hamiltonian $H$ and the polarization operator $\\bf{P}$"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b3ac6f",
+   "id": "4fc6bad2",
    "metadata": {},
    "source": [
     "$$\\bf{v} = \\frac{-i}{\\hbar} [H, \\bf{P}]$$"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c272f60",
+   "id": "b49461ff",
    "metadata": {},
    "source": [
     "The time-dependent induced current (density) is given by the expectation value of the current density operator $\\bf{j}$, which is related to the velocity operator as $\\bf{j} = e\\bf{v}$. In GRANAD's units, setting the elementary charge $e = 1$, the velocity operator is thus identical to the current density operator, with which we can immediately evalute the induced currents due to the external field."
@@ -145,13 +145,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dabc0d22",
+   "id": "a6249c06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:44.011428Z",
-     "iopub.status.busy": "2025-01-27T15:51:44.010354Z",
-     "iopub.status.idle": "2025-01-27T15:51:48.930304Z",
-     "shell.execute_reply": "2025-01-27T15:51:48.929692Z"
+     "iopub.execute_input": "2025-01-27T16:17:36.619246Z",
+     "iopub.status.busy": "2025-01-27T16:17:36.618466Z",
+     "iopub.status.idle": "2025-01-27T16:17:41.840253Z",
+     "shell.execute_reply": "2025-01-27T16:17:41.839657Z"
     }
    },
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d95527",
+   "id": "2ccc7fec",
    "metadata": {},
    "source": [
     "A detailed description of parameters to the Gaussian pulse is given in the electric fields tutorial."
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16938992",
+   "id": "fe962bc9",
    "metadata": {},
    "source": [
     "We can also Fourier transform the result to obtain the frequency domain result by specifying the omega limits. Note that omitting the variables xlabel and ylabel will result in no axis labels."
@@ -222,13 +222,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9ed82fc4",
+   "id": "aba1a5f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:48.932180Z",
-     "iopub.status.busy": "2025-01-27T15:51:48.931974Z",
-     "iopub.status.idle": "2025-01-27T15:51:49.465649Z",
-     "shell.execute_reply": "2025-01-27T15:51:49.464895Z"
+     "iopub.execute_input": "2025-01-27T16:17:41.842433Z",
+     "iopub.status.busy": "2025-01-27T16:17:41.841944Z",
+     "iopub.status.idle": "2025-01-27T16:17:42.437318Z",
+     "shell.execute_reply": "2025-01-27T16:17:42.436691Z"
     }
    },
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6493403",
+   "id": "4a241bbc",
    "metadata": {},
    "source": [
     "Note that the sparsity of the spectral grid ows to the sparse sampling in time domain which we have chosen for demonstrational purposes. A real simulation requires more careful refinement of the temporal grid. A finer temporal grid or longer integration time generally results in higher quality spectra."
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ba7cfa5",
+   "id": "0896b4ff",
    "metadata": {},
    "source": [
     "## Space-dependent arrays"
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c014ee3e",
+   "id": "143de239",
    "metadata": {},
    "source": [
     "The functions show_2d and show_3d are a bit more versatile than initially indicated."
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f16d25a",
+   "id": "e292b6e1",
    "metadata": {},
    "source": [
     "If we supply a \"display\" argument, we can plot an arbitrary array on the grid spanned by the orbitals and filter it by orbital tags. Let's demonstrate this by visualizing the lowest energy single-particle state of the flake"
@@ -282,13 +282,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "012ea9d2",
+   "id": "4d016e7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:49.467925Z",
-     "iopub.status.busy": "2025-01-27T15:51:49.467531Z",
-     "iopub.status.idle": "2025-01-27T15:51:49.894228Z",
-     "shell.execute_reply": "2025-01-27T15:51:49.893559Z"
+     "iopub.execute_input": "2025-01-27T16:17:42.439728Z",
+     "iopub.status.busy": "2025-01-27T16:17:42.439261Z",
+     "iopub.status.idle": "2025-01-27T16:17:42.901773Z",
+     "shell.execute_reply": "2025-01-27T16:17:42.901048Z"
     }
    },
    "outputs": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682660ba",
+   "id": "a400456e",
    "metadata": {},
    "source": [
     "If you want a normalized plot of the absolute values, do"
@@ -319,13 +319,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "317e53b5",
+   "id": "5894ad67",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:49.896173Z",
-     "iopub.status.busy": "2025-01-27T15:51:49.895790Z",
-     "iopub.status.idle": "2025-01-27T15:51:50.367073Z",
-     "shell.execute_reply": "2025-01-27T15:51:50.366481Z"
+     "iopub.execute_input": "2025-01-27T16:17:42.904042Z",
+     "iopub.status.busy": "2025-01-27T16:17:42.903643Z",
+     "iopub.status.idle": "2025-01-27T16:17:43.398753Z",
+     "shell.execute_reply": "2025-01-27T16:17:43.398049Z"
     }
    },
    "outputs": [
@@ -346,22 +346,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ff2dd7",
+   "id": "e6088699",
    "metadata": {},
    "source": [
     "Furthermore, there are two special plot modes, given by the `mode` argument:\n",
     "\n",
-    "1. `mode = 'two-signed'`:\n",
-    "   - This mode is designed for visualizing data with both positive and negative values, such as real parts of eigenvectors or signed distributions.\n",
-    "   - The plot uses a diverging colormap (centered at zero) to clearly distinguish between positive and negative values. \n",
-    "   - The color limits are symmetrically set based on the maximum absolute value in the data, ensuring an even visual emphasis on both extremes.\n",
-    "   - This mode is particularly useful for understanding symmetry or changes in sign within the data.\n",
+    "1. `mode = 'two-signed'`: This mode is designed for visualizing data with both positive and negative values, such as real parts of eigenvectors or signed distributions. The plot uses a diverging colormap (centered at zero) to clearly distinguish between positive and negative values.  The color limits are symmetrically set based on the maximum absolute value in the data, ensuring an even visual emphasis on both extremes. This mode is particularly useful for understanding symmetry or changes in sign within the data.\n",
     "\n",
-    "2. `mode = 'one-signed'`:\n",
-    "   - This mode is intended for visualizing non-negative data or cases where only the magnitude of values is meaningful.\n",
-    "   - A sequential colormap is used to highlight variations in the data, with darker shades typically representing larger values.\n",
-    "   - Negative values in the `display` array are ignored in this mode, as the focus is on positive contributions.\n",
-    "   - This mode works well for showing absolute values of data, such as the magnitude of eigenvectors or probabilities.\n",
+    "2. `mode = 'one-signed'`: This mode is intended for visualizing non-negative data or cases where only the magnitude of values is meaningful. A sequential colormap is used to highlight variations in the data, with darker shades typically representing larger values. Negative values in the `display` array are ignored in this mode, as the focus is on positive contributions. This mode works well for showing absolute values of data, such as the magnitude of eigenvectors or probabilities.\n",
     "\n",
     "These modes provide flexibility in how data is visualized, depending on whether sign information is important or not."
    ]
@@ -369,13 +361,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0830ba5c",
+   "id": "b5a0a659",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:50.368828Z",
-     "iopub.status.busy": "2025-01-27T15:51:50.368652Z",
-     "iopub.status.idle": "2025-01-27T15:51:50.915395Z",
-     "shell.execute_reply": "2025-01-27T15:51:50.914776Z"
+     "iopub.execute_input": "2025-01-27T16:17:43.400822Z",
+     "iopub.status.busy": "2025-01-27T16:17:43.400354Z",
+     "iopub.status.idle": "2025-01-27T16:17:43.949944Z",
+     "shell.execute_reply": "2025-01-27T16:17:43.949383Z"
     }
    },
    "outputs": [
@@ -408,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d29415d",
+   "id": "8af96bc8",
    "metadata": {},
    "source": [
     "Additionally, if you supply the keyword argument name = \"MY-PLOT-NAME.pdf\" to any plotting function, the plot will not be displayed, but instead saved to disk in the directory you invoked Python."
@@ -416,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7890bf",
+   "id": "c22dc369",
    "metadata": {},
    "source": [
     "There exists a convenience function to compute and visualize the induced field at an arbitrary time step. \n",
@@ -427,13 +419,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b36d822e",
+   "id": "7ee46986",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:50.917572Z",
-     "iopub.status.busy": "2025-01-27T15:51:50.917208Z",
-     "iopub.status.idle": "2025-01-27T15:51:52.193885Z",
-     "shell.execute_reply": "2025-01-27T15:51:52.193341Z"
+     "iopub.execute_input": "2025-01-27T16:17:43.951992Z",
+     "iopub.status.busy": "2025-01-27T16:17:43.951782Z",
+     "iopub.status.idle": "2025-01-27T16:17:45.246105Z",
+     "shell.execute_reply": "2025-01-27T16:17:45.245599Z"
     }
    },
    "outputs": [
@@ -465,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f6d1162",
+   "id": "82109403",
    "metadata": {},
    "source": [
     "Next, we define the extent of a 2D grid. This grid represents the spatial domain where the induced field \n",
@@ -476,13 +468,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6cd16fb4",
+   "id": "40b0738d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:52.195910Z",
-     "iopub.status.busy": "2025-01-27T15:51:52.195550Z",
-     "iopub.status.idle": "2025-01-27T15:51:52.261933Z",
-     "shell.execute_reply": "2025-01-27T15:51:52.261400Z"
+     "iopub.execute_input": "2025-01-27T16:17:45.248071Z",
+     "iopub.status.busy": "2025-01-27T16:17:45.247718Z",
+     "iopub.status.idle": "2025-01-27T16:17:45.317025Z",
+     "shell.execute_reply": "2025-01-27T16:17:45.316496Z"
     }
    },
    "outputs": [],
@@ -501,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fff897c4",
+   "id": "a18377d1",
    "metadata": {},
    "source": [
     "Finally, we use the `show_induced_field` function to compute and visualize the induced field on the \n",
@@ -512,13 +504,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1f637031",
+   "id": "8ebc3b98",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T15:51:52.263987Z",
-     "iopub.status.busy": "2025-01-27T15:51:52.263801Z",
-     "iopub.status.idle": "2025-01-27T15:51:53.386862Z",
-     "shell.execute_reply": "2025-01-27T15:51:53.386240Z"
+     "iopub.execute_input": "2025-01-27T16:17:45.319330Z",
+     "iopub.status.busy": "2025-01-27T16:17:45.318929Z",
+     "iopub.status.idle": "2025-01-27T16:17:46.496383Z",
+     "shell.execute_reply": "2025-01-27T16:17:46.495826Z"
     }
    },
    "outputs": [
