deploy: 04c7a11f6ee736d240198a4aa77c4f70f1c3327b

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ab94f8b",
+   "id": "868b374f",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "391e9025",
+   "id": "32fb7d59",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "448ada24",
+   "id": "43dade7c",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "834c3869",
+   "id": "e435dd81",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2dd0725",
+   "id": "1aec7377",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "054dd43e",
+   "id": "e774404b",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "70cd37f3",
+   "id": "7f747f8a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:25.459098Z",
-     "iopub.status.busy": "2025-01-27T16:48:25.458648Z",
-     "iopub.status.idle": "2025-01-27T16:48:30.272281Z",
-     "shell.execute_reply": "2025-01-27T16:48:30.271686Z"
+     "iopub.execute_input": "2025-01-27T16:51:41.772508Z",
+     "iopub.status.busy": "2025-01-27T16:51:41.772335Z",
+     "iopub.status.idle": "2025-01-27T16:51:46.101929Z",
+     "shell.execute_reply": "2025-01-27T16:51:46.101337Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "287e887f",
+   "id": "de600f08",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e24cd27d",
+   "id": "0d5d14b7",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5ccf68b",
+   "id": "1c84e803",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd7e579",
+   "id": "529c5442",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "970ad5cc",
+   "id": "a0b355ec",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eee382fb",
+   "id": "ff8ede50",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "094d5d5a",
+   "id": "d15b7cea",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8217fe0f",
+   "id": "96567734",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bd7c78bd",
+   "id": "17fda7d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:30.274847Z",
-     "iopub.status.busy": "2025-01-27T16:48:30.274378Z",
-     "iopub.status.idle": "2025-01-27T16:48:32.428648Z",
-     "shell.execute_reply": "2025-01-27T16:48:32.428096Z"
+     "iopub.execute_input": "2025-01-27T16:51:46.104442Z",
+     "iopub.status.busy": "2025-01-27T16:51:46.103912Z",
+     "iopub.status.idle": "2025-01-27T16:51:48.009269Z",
+     "shell.execute_reply": "2025-01-27T16:51:48.008646Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac803bc4",
+   "id": "eb340f29",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b54b5b70",
+   "id": "13007685",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:32.430756Z",
-     "iopub.status.busy": "2025-01-27T16:48:32.430385Z",
-     "iopub.status.idle": "2025-01-27T16:48:32.434167Z",
-     "shell.execute_reply": "2025-01-27T16:48:32.433584Z"
+     "iopub.execute_input": "2025-01-27T16:51:48.011264Z",
+     "iopub.status.busy": "2025-01-27T16:51:48.010924Z",
+     "iopub.status.idle": "2025-01-27T16:51:48.014588Z",
+     "shell.execute_reply": "2025-01-27T16:51:48.014123Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4182764d",
+   "id": "618b05b2",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9285b7",
+   "id": "39d7fec6",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d0d3958",
+   "id": "b19aad2e",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9fe6971",
+   "id": "3b899de6",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "268da140",
+   "id": "d1e7d833",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:32.436116Z",
-     "iopub.status.busy": "2025-01-27T16:48:32.435767Z",
-     "iopub.status.idle": "2025-01-27T16:48:32.484017Z",
-     "shell.execute_reply": "2025-01-27T16:48:32.483473Z"
+     "iopub.execute_input": "2025-01-27T16:51:48.016335Z",
+     "iopub.status.busy": "2025-01-27T16:51:48.016157Z",
+     "iopub.status.idle": "2025-01-27T16:51:48.062293Z",
+     "shell.execute_reply": "2025-01-27T16:51:48.061715Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "430ec1f2",
+   "id": "8a1cc859",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "52d231b9",
+   "id": "b6dbe096",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:32.486093Z",
-     "iopub.status.busy": "2025-01-27T16:48:32.485610Z",
-     "iopub.status.idle": "2025-01-27T16:48:32.560034Z",
-     "shell.execute_reply": "2025-01-27T16:48:32.559491Z"
+     "iopub.execute_input": "2025-01-27T16:51:48.064231Z",
+     "iopub.status.busy": "2025-01-27T16:51:48.063896Z",
+     "iopub.status.idle": "2025-01-27T16:51:48.133795Z",
+     "shell.execute_reply": "2025-01-27T16:51:48.133198Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9739b75",
+   "id": "2140d7b0",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdda679f",
+   "id": "6953b7cc",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eba20921",
+   "id": "ea4b01b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:32.562006Z",
-     "iopub.status.busy": "2025-01-27T16:48:32.561678Z",
-     "iopub.status.idle": "2025-01-27T16:48:32.594371Z",
-     "shell.execute_reply": "2025-01-27T16:48:32.593813Z"
+     "iopub.execute_input": "2025-01-27T16:51:48.136079Z",
+     "iopub.status.busy": "2025-01-27T16:51:48.135590Z",
+     "iopub.status.idle": "2025-01-27T16:51:48.165778Z",
+     "shell.execute_reply": "2025-01-27T16:51:48.165297Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca8b873c",
+   "id": "25115033",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63888a86",
+   "id": "4187a83a",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6ca3166",
+   "id": "8e9ed313",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbcd294c",
+   "id": "99562aea",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2d373c0",
+   "id": "cf86eabb",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb2326b2",
+   "id": "18b427a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:32.596380Z",
-     "iopub.status.busy": "2025-01-27T16:48:32.596164Z",
-     "iopub.status.idle": "2025-01-27T16:48:32.600449Z",
-     "shell.execute_reply": "2025-01-27T16:48:32.599803Z"
+     "iopub.execute_input": "2025-01-27T16:51:48.167648Z",
+     "iopub.status.busy": "2025-01-27T16:51:48.167479Z",
+     "iopub.status.idle": "2025-01-27T16:51:48.171818Z",
+     "shell.execute_reply": "2025-01-27T16:51:48.171175Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c03be62b",
+   "id": "48de305a",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "26987795",
+   "id": "9fee4b5b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:32.602283Z",
-     "iopub.status.busy": "2025-01-27T16:48:32.601994Z",
-     "iopub.status.idle": "2025-01-27T16:48:32.605213Z",
-     "shell.execute_reply": "2025-01-27T16:48:32.604649Z"
+     "iopub.execute_input": "2025-01-27T16:51:48.173772Z",
+     "iopub.status.busy": "2025-01-27T16:51:48.173428Z",
+     "iopub.status.idle": "2025-01-27T16:51:48.176425Z",
+     "shell.execute_reply": "2025-01-27T16:51:48.175867Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dc6590a",
+   "id": "d59abd6b",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e78745c2",
+   "id": "5ff2786f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:32.607089Z",
-     "iopub.status.busy": "2025-01-27T16:48:32.606779Z",
-     "iopub.status.idle": "2025-01-27T16:48:35.314934Z",
-     "shell.execute_reply": "2025-01-27T16:48:35.314336Z"
+     "iopub.execute_input": "2025-01-27T16:51:48.178106Z",
+     "iopub.status.busy": "2025-01-27T16:51:48.177766Z",
+     "iopub.status.idle": "2025-01-27T16:51:50.770151Z",
+     "shell.execute_reply": "2025-01-27T16:51:50.769547Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a27710d",
+   "id": "723d2658",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cfb51cd",
+   "id": "2765631a",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c9a835",
+   "id": "bacc1173",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ad3fcc2",
+   "id": "678423e9",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8c277718",
+   "id": "a9836abe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:35.316847Z",
-     "iopub.status.busy": "2025-01-27T16:48:35.316656Z",
-     "iopub.status.idle": "2025-01-27T16:48:35.320258Z",
-     "shell.execute_reply": "2025-01-27T16:48:35.319651Z"
+     "iopub.execute_input": "2025-01-27T16:51:50.772130Z",
+     "iopub.status.busy": "2025-01-27T16:51:50.771939Z",
+     "iopub.status.idle": "2025-01-27T16:51:50.775369Z",
+     "shell.execute_reply": "2025-01-27T16:51:50.774685Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fed3db5de40>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6a74285e40>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c534300b",
+   "id": "565c7fb7",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12f5926d",
+   "id": "1d33941f",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc044fe8",
+   "id": "c357c557",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40868284",
+   "id": "afff25ee",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fed49728",
+   "id": "c4b15791",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:35.322136Z",
-     "iopub.status.busy": "2025-01-27T16:48:35.321798Z",
-     "iopub.status.idle": "2025-01-27T16:48:35.324809Z",
-     "shell.execute_reply": "2025-01-27T16:48:35.324335Z"
+     "iopub.execute_input": "2025-01-27T16:51:50.777224Z",
+     "iopub.status.busy": "2025-01-27T16:51:50.777046Z",
+     "iopub.status.idle": "2025-01-27T16:51:50.780068Z",
+     "shell.execute_reply": "2025-01-27T16:51:50.779572Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fb380997",
+   "id": "18a300c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:48:35.326566Z",
-     "iopub.status.busy": "2025-01-27T16:48:35.326220Z",
-     "iopub.status.idle": "2025-01-27T16:48:36.392131Z",
-     "shell.execute_reply": "2025-01-27T16:48:36.391502Z"
+     "iopub.execute_input": "2025-01-27T16:51:50.781747Z",
+     "iopub.status.busy": "2025-01-27T16:51:50.781400Z",
+     "iopub.status.idle": "2025-01-27T16:51:51.828989Z",
+     "shell.execute_reply": "2025-01-27T16:51:51.828376Z"
     }
    },
    "outputs": [
